2006-06-26  Zoltan Varga  <vargaz@gmail.com>

	* solaris_threads.c: And another one.

	* solaris_pthreads.c: Avoid another solaris/x86 #error.

2006-04-08  Zoltan Varga  <vargaz@gmail.com>

	* dyn_load.c: Avoid #error "large files are not supported by libelf" errors on solaris/x86.

2006-05-24  Martin Baulig  <martin@ximian.com>

	* doc/debugger-support.txt: Removed; this issue turned out to be
	something completely different and the patch mentioned in this
	file is already reverted.

2006-05-23  Zoltan Varga  <vargaz@gmail.com>

	* os_dep.c (GC_unix_get_mem): Add an assert to bail out early if the runtime is
	run on a machine with smaller page size than HBLKSIZE.

2006-05-19  Martin Baulig  <martin@ximian.com>

	* include/gc.h: Don't include "libgc-mono-debugger.h".

	* pthread_support.c, pthread_stop_world.c: Include it here.

2006-05-17  Martin Baulig  <martin@ximian.com>

	* pthread-support.c, pthread-stop-world.c: Put the debugger stuff
	inside a `#if LIBGC_MONO_DEBUGGER_SUPPORTED' conditional.

2006-05-17  Martin Baulig  <martin@ximian.com>

	Fix a weird race condition which prevented XSP from working inside
	the debugger - see doc/debugger-issues.txt for details.

	* include/gc.h: Moved the "libgc-mono-debugger.h" #include down
	after the gc_pthread_redirects.h one.

	* include/libgc-mono-debugger.h
	(GCThreadFunctions): Added `thread_created' and `thread_exited'.
	(GC_mono_debugger_add_all_threads): New function prototype.

	* pthread_stop_world.c (gc_thread_vtable): Allow the vtable and
	any function in it be NULL; use NULL as the default vtable.
	(GC_mono_debugger_add_all_threads): New public function.

	* pthread_support.c
	(GC_delete_thread): Call `gc_thread_vtable->thread_exited()'.
	(GC_thr_init): Call `gc_thread_vtable->thread_created()'.

2006-04-05  Zoltan Varga  <vargaz@gmail.com>

	* include/private/gcconfig.h (LINUX and SPARC): Applied patch from 
	David S. Miller <davem@davemloft.net>: Do not